<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_event_detail_photo"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:transitionName="event_image"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_event_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="@dimen/padding_nomal"
            android:paddingRight="@dimen/padding_nomal"
            android:textSize="@dimen/text_big_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_event_detail_joiner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_event_detail_title" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_event_like"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="24dp"
            android:background="@drawable/shape_pink"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:text="@string/event_like"
            android:textSize="14sp"
            android:textColor="@color/red_base" />
        <TextView
            android:id="@+id/tv_event_join"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/shape_pink"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:text="@string/event_join"
            android:textSize="14sp"
            android:textColor="@color/red_base" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_big_magin"
        android:layout_marginLeft="@dimen/text_big_magin"
        android:padding="@dimen/text_small_magin"
        android:background="@drawable/bg_light_gray"
        android:text="@string/event_detail"
        android:textSize="@dimen/text_big_size"
        android:textStyle="bold"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/text_big_magin"
        android:layout_marginLeft="@dimen/text_big_magin"
        android:layout_marginRight="@dimen/text_big_magin"
        android:background="@drawable/bg_light_gray">
        <WebView
            android:id="@+id/wv_event__detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </WebView>
    </FrameLayout>

</LinearLayout>