<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_book_detail_photo"
        android:layout_width="140dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_book_detail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_book_detail_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_book_detail_title"
            app:layout_constraintStart_toStartOf="@+id/tv_book_detail_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_book_detail_title" />

        <TextView
            android:id="@+id/tv_book_detail_publisher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_book_detail_author"
            app:layout_constraintStart_toStartOf="@+id/tv_book_detail_author"
            app:layout_constraintTop_toBottomOf="@+id/tv_book_detail_author" />

        <TextView
            android:id="@+id/tv_book_detail_publish_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_book_detail_publisher"
            app:layout_constraintStart_toStartOf="@+id/tv_book_detail_publisher"
            app:layout_constraintTop_toBottomOf="@+id/tv_book_detail_publisher" />

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="豆瓣评分" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RatingBar
                        android:id="@+id/rb_book_detail"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:numStars="5"
                        android:rating="3" />

                    <TextView
                        android:id="@+id/tv_book_detail_grade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_book_detail_rating_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="28人" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_want_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_pink"
            android:padding="10dp"
            android:text="@string/book_detail_want_see"
            android:textSize="14sp"
            android:textColor="@color/red_base" />
        <TextView
            android:id="@+id/tv_more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@drawable/shape_pink"
            android:padding="10dp"
            android:text="@string/book_detail_see_more"
            android:textSize="14sp"
            android:textColor="@color/red_base" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_big_magin"
        android:layout_marginLeft="@dimen/text_big_magin"
        android:padding="@dimen/text_small_magin"
        android:background="@drawable/bg_light_gray"
        android:text="@string/book_detail_sample"
        android:textSize="@dimen/text_big_size"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_book_detail_sunmery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_big_magin"
        android:layout_marginLeft="@dimen/text_big_magin"
        android:layout_marginRight="@dimen/text_big_magin"
        android:padding="@dimen/text_small_magin"
        android:background="@drawable/bg_light_gray"
        android:textSize="@dimen/text_nomal_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_big_magin"
        android:layout_marginLeft="@dimen/text_big_magin"
        android:padding="@dimen/text_small_magin"
        android:background="@drawable/bg_light_gray"
        android:text="@string/book_detail_author"
        android:textSize="@dimen/text_big_size"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_book_detail_author_sunmury"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_big_magin"
        android:layout_marginLeft="@dimen/text_big_magin"
        android:layout_marginRight="@dimen/text_big_magin"
        android:padding="@dimen/text_small_magin"
        android:background="@drawable/bg_light_gray"
        android:textSize="@dimen/text_nomal_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_big_magin"
        android:layout_marginLeft="@dimen/text_big_magin"
        android:padding="@dimen/text_small_magin"
        android:background="@drawable/bg_light_gray"
        android:text="@string/book_detail_catalog"
        android:textSize="@dimen/text_big_size"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_book_detail_catalog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_big_magin"
        android:layout_marginLeft="@dimen/text_big_magin"
        android:layout_marginRight="@dimen/text_big_magin"
        android:padding="@dimen/text_small_magin"
        android:background="@drawable/bg_light_gray"
        android:textSize="@dimen/text_nomal_size"/>

</LinearLayout>